--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "functions": {
     "api/server.js": {
       "memory": 1024,
-      "includeFiles": "db.json"
+      "includeFiles": "aircraft-db.json"
     }
   },
   "rewrites": [
@@ -12,3 +12,4 @@
     }
   ]
 }
+ 
